--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="">Github</a>
                 <a href="">Portfolio</a>
                 <a href="">Linkedin</a>
-                <a href="">Whatsapp</a>
+                <a href="https://wa.me/51947279514" target="_blank">Whatsapp</a>
             </div>
         </div>
     </article>
